feat: target enrichment rules
